--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -70,5 +70,5 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
           packages-dir: dist/
-          repository-url: https://test.pypi.org/project/packaging_tutorial_gar7mn/
+          repository-url: https://upload.pypi.org/legacy/
           # ${{ github.event.release.name }}
